clippath fix

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,7 @@
 }
 
 img{
-  clip-path: polygon(0% 4%, 99.57% 13.18%, 100% 99.5%, 0% 90%);clip-path: polygon(0% 3%, 99.57% 13.18%, 100% 99.5%, 0% 90%);
-
+  clip-path: polygon(0% 3%, 99.57% 13.18%, 100% 99.5%, 0% 90%);
 }
 
 
